--- a/Contacts.html
+++ b/Contacts.html
@@ -88,6 +88,14 @@
     </ul>
 </div>
 
+<div id="social_media2">
+    <ul>
+        <a href="https://www.flickr.com/photos/154270674@N02/"><img src="Images/flickr-logo-png-3.png" width="100" height="100"></a>
+        <a href="https://www.instagram.com/ljw980105/"><img src="Images/ig.png" width="100" height="100"></a>
+        <a href="https://www.behance.net/MrProLi"><img src="Images/behance-vector-logo.png" width="100" height="100"></a>
+    </ul>
+</div>
+
 <!--<div id="footer" class="_center">-->
     <!--<h4 id="f00ter"> &copy; JING WEI LI 2017</h4>-->
 <!--</div>-->
