Added Walk The Moon to Portfolio

--- a/Graphic Design.html
+++ b/Graphic Design.html
@@ -72,9 +72,14 @@
             <a class="shadow" href="https://www.behance.net/gallery/47281675/2026-Time-Capsule">Featured Project <br /> 2026 Time Capsule</a>
         </div>
 
-        <div id="img4" class="imgContainer">
+        <div id="img4" class="imgContainer marg-bottom">
             <img class="smooth_blur" src="Images/graphics3.jpg">
             <a class="shadow" href="https://www.behance.net/gallery/47687973/Robotics-Recruitment-Poster">Robotics Poster</a>
+        </div>
+
+        <div id="img5" class="imgContainer gfxCommon">
+            <img class="smooth_blur" src="Images/Walk%20the%20Moon.png">
+            <a class="shadow" href="https://www.behance.net/gallery/57666401/Walk-the-Moon-Graphic">Walk The Moon</a>
         </div>
     </div>
     <div id="col2">
