100th Commit: Added Glorious Horizontal Scroll Menu for Mobile

--- a/Graphic Design.html
+++ b/Graphic Design.html
@@ -41,15 +41,36 @@
     <img id="navicon" src="Images/navicon.png" height="50px" width="50px" >
 </div>
 
-<ul id="mobile_nav">
-    <a id="nav_fist" href="index.html">HOME</a>
-    <a href="Bio.html">ABOUT</a>
-    <a href="Resume.html">RESUME</a>
-    <a href="Graphic Design.html">GRAPHIC DESIGN</a>
-    <a id="nav_projz" href="Projects.html">PROJECTS</a>
-    <a href="Games.html">GAMES</a>
-    <a id="nav_last" href="Contacts.html">CONTACT</a>
-</ul>
+<nav id="mobile_nav">
+    <div class="horizScrollDiv" style="margin-left: 20px">
+        <a href="index.html"><img src="Images/home.png" height="70" width="70"></a>
+        <li><a href="index.html">HOME</a></li>
+    </div>
+    <div class="horizScrollDiv">
+        <a href="Bio.html"><img src="Images/aboutIcon.png" height="70" width="70"></a>
+        <li><a href="Bio.html">ABOUT</a></li>
+    </div>
+    <div class="horizScrollDiv">
+        <a href="Resume.html"><img src="Images/resumelogo.png" height="70" width="70"></a>
+        <li><a href="Resume.html">RESUME</a></li>
+    </div>
+    <div class="horizScrollDiv">
+        <a href="Graphic Design.html"><img src="Images/splashIcon.png" height="70" width="70"></a>
+        <li><a href="Graphic Design.html">GRAPHIC DESIGN</a></li>
+    </div>
+    <div class="horizScrollDiv">
+        <img src="Images/gearIcon.png" height="70" width="70">
+        <li><a href="Projects.html">PROJECTS</a></li>
+    </div>
+    <div class="horizScrollDiv">
+        <a href="Games.html"><img src="Images/gameIcon.png" height="70" width="70"></a>
+        <li><a href="Games.html">GAMES</a></li>
+    </div>
+    <div class="horizScrollDiv" style="margin-right: 20px">
+        <a href="Contacts.html"><img src="Images/phone.png" height="70" width="70"></a>
+        <li><a href="Contacts.html">CONTACT</a></li>
+    </div>
+</nav>
 
 <div id="showcase"></div>
 
