--- a/Games.html
+++ b/Games.html
@@ -66,7 +66,7 @@
         <li><a href="Graphic Design.html">GRAPHIC DESIGN</a></li>
     </div>
     <div class="horizScrollDiv">
-        <img src="Images/gearIcon.png" height="70" width="70">
+        <a href="Projects.html"><img src="Images/gearIcon.png"height="70"width="70"></a>
         <li><a href="Projects.html">PROJECTS</a></li>
     </div>
     <div class="horizScrollDiv">
