--- a/Resume.html
+++ b/Resume.html
@@ -90,7 +90,7 @@
 
 <div id="intro">
     <h1> Welcome to My Digital Resume</h1>
-    <a href="ResumeOct17.pdf">or visit the standard resume</a>
+    <a href="ResumeNov17.pdf">or visit the standard resume</a>
 </div>
 
 <div id="quick_guide">
