Preliminary Media Queries Added to LITEC

--- a/Litec.html
+++ b/Litec.html
@@ -76,7 +76,7 @@
 <div id="litec_bg">
     <div id="text_section">
         <h4 id="litec_title">Embedded Control</h4>
-        <h2 style="margin-top: -12%">Embedded Systems Project</h2>
+        <h2 id="first_h2">Embedded Systems Project</h2>
         <h2 style="margin-top: -3%">Fall 2017 @ RPI</h2>
         <div id="litec_github">
             <img src="Images/github.png" height="38" width="38">
