Added 1st Smart Car Content

--- a/Litec.html
+++ b/Litec.html
@@ -85,6 +85,13 @@
     </div>
 </div>
 
+<div id="smart_car_intro">
+    <div id="sc_text">
+        <h1>Target System #1: Smart Car</h1>
+        <h2>Equipped with Sonar, Compass & Accelerometer</h2>
+    </div>
+</div>
+
 <div id="content1">
     <h1>Under Construction</h1>
 </div>
