Added Flickr Gallery for LITEC

--- a/Litec.html
+++ b/Litec.html
@@ -86,9 +86,21 @@
 </div>
 
 <div id="smart_car_intro">
-    <div id="sc_text">
+    <div id="sc_text" class="h2styles">
         <h1>Target System #1: Smart Car</h1>
         <h2>Equipped with Sonar, Compass & Accelerometer</h2>
+    </div>
+</div>
+
+<div id ="flickr_album" class="h2styles">
+    <h1 style="text-align: center">Flickr Gallery</h1>
+    <h2 style="text-align: center; margin: -1.5% 5% 5% 5%">High-quality Images of the Smart Car</h2>
+    <div id="album_container">
+        <script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+        <a data-flickr-embed="true" data-header="true" data-footer="true"
+           href="https://www.flickr.com/photos/154270674@N02/albums/72157689896686215" title="Embedded Control (LITEC) Project @ RPI">
+            <img src="https://farm5.staticflickr.com/4541/37851130024_956d96289c_b.jpg" alt="Embedded Control (LITEC) Project @ RPI">
+        </a>
     </div>
 </div>
 
