Added Features to LITEC

--- a/Litec.html
+++ b/Litec.html
@@ -85,6 +85,33 @@
     </div>
 </div>
 
+<div id="features">
+    <div id="ft-titles" class="h2styles">
+        <h1>Features & Technologies</h1>
+        <h2>Incredible Features Implemented on Our Embedded Systems</h2>
+    </div>
+    <div id="ft-wrapper">
+        <div id="ft-col1">
+            <div id="c" class="features_container">
+                <h3> C & SDCC</h3>
+                <p>
+                    The smart car and the gondola are both programmed with the c programming language. The code is then
+                    compiled with the SDCC compiler, enabling the embedded functionality with ease.
+                </p>
+            </div>
+        </div>
+        <div id="ft-col2">
+            <div id="c2" class="features_container">
+                <h3> GitHub</h3>
+                <p>
+                    The smart car and the gondola are both programmed with the c programming language. The code is then
+                    compiled with the SDCC compiler, enabling the embedded functionality with ease.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div id="smart_car_intro">
     <div id="sc_text" class="h2styles">
         <h1>Target System #1: Smart Car</h1>
