More Contents for LITEC w/ Media Queries

--- a/Litec.html
+++ b/Litec.html
@@ -14,7 +14,7 @@
     <link href="CSS/common.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 
-<body id="bod">
+<body>
 <div id="nav" class="menu-wrap">
     <nav class="menu">
         <ul class="clearfix">
@@ -75,7 +75,7 @@
 
 <div id="litec_bg">
     <div id="text_section">
-        <h4 id="litec_title">Embedded Control</h4>
+        <h1 id="litec_title">Embedded Control</h1>
         <h2 id="first_h2">Embedded Systems Project</h2>
         <h2 style="margin-top: -3%">Fall 2017 @ RPI</h2>
         <div id="litec_github">
@@ -95,17 +95,31 @@
             <div id="c" class="features_container">
                 <h3> C & SDCC</h3>
                 <p>
-                    The smart car and the gondola are both programmed with the c programming language. The code is then
+                    Both the smart car and the gondola are programmed with the c programming language. The code is then
                     compiled with the SDCC compiler, enabling the embedded functionality with ease.
+                </p>
+            </div>
+            <div class="features_container">
+                <h3> Hardware on Protoboard</h3>
+                <p>
+                    We implemented all our hardware with sophisticated wiring and design on a single protoboard, also
+                    known as a breadboard. Good hardware design goes a long way.
                 </p>
             </div>
         </div>
         <div id="ft-col2">
-            <div id="c2" class="features_container">
+            <div class="features_container">
                 <h3> GitHub</h3>
                 <p>
-                    The smart car and the gondola are both programmed with the c programming language. The code is then
-                    compiled with the SDCC compiler, enabling the embedded functionality with ease.
+                    The source code for our embedded systems are entirely maintained on GitHub, allowing for better
+                    team collaboration and version control. View the Git repo <a href="https://github.com/ljw980105/Embedded-Control"> here</a>.
+                </p>
+            </div>
+            <div class="features_container">
+                <h3> C8501 Microcontroller</h3>
+                <p>
+                    The Silicon Labs C8051 is a 8-bit microcontroller serving as the heart of these embedded systems, enabling
+                    seamless communication between hardware and software. Without it, our ideas wouldn't come to life.
                 </p>
             </div>
         </div>
