--- a/Litec.html
+++ b/Litec.html
@@ -106,6 +106,14 @@
                     known as a breadboard. Good hardware design goes a long way.
                 </p>
             </div>
+            <div class="features_container">
+                <h3>ADC & Potentiometer</h3>
+                <p>
+                    Analog to Digital Conversion (ADC) on the Smart Car converts an voltage supplied by the hardware into
+                    a digital value ranging from 0 to 255. By combining this technology with the voltage-altering
+                    potentiometer, we are able to adjust software parameters with on-board hardware.
+                </p>
+            </div>
         </div>
         <div id="ft-col2">
             <div class="features_container">
@@ -116,10 +124,18 @@
                 </p>
             </div>
             <div class="features_container">
-                <h3> C8501 Microcontroller</h3>
+                <h3> C8051 Microcontroller</h3>
                 <p>
                     The Silicon Labs C8051 is a 8-bit microcontroller serving as the heart of these embedded systems, enabling
                     seamless communication between hardware and software. Without it, our ideas wouldn't come to life.
+                </p>
+            </div>
+            <div class="features_container">
+                <h3>I<sup>2</sup>C Communication</h3>
+                <p>
+                    I<sup>2</sup>C (Inter-Integrated Circuit) is a serial computer bus utilized to attach peripheral
+                    devices to microprocessors for short-range communication. We've implemented this standard to take advantage
+                    of the power of ranger, compass and accelerometer for use on our embedded systems.
                 </p>
             </div>
         </div>
