--- a/Litec.html
+++ b/Litec.html
@@ -79,8 +79,8 @@
         <h2 id="first_h2">Embedded Systems Project</h2>
         <h2 style="margin-top: -3%">Fall 2017 @ RPI</h2>
         <div id="litec_github">
-            <img src="Images/github.png" height="38" width="38">
-            <a href="https://github.com/ljw980105/Embedded-Control">View On GitHub</a>
+            <img src="Images/playButton.png" height="38" width="38">
+            <a href="https://www.youtube.com/watch?v=UfkjDzoJh3E">Watch the Video</a>
         </div>
     </div>
 </div>
