--- a/Resume.html
+++ b/Resume.html
@@ -134,7 +134,7 @@
             <!--<img src="images/rpilogo.jpg" width="400px" height="400px">-->
             <h2>RENSSELAER POLYTECHNIC <br/>INSTITUTE (RPI)</h2>
             <h3>2016-2020</h3>
-            <h5>B.S. Electrical Engineering & Computer Engineering </h5>
+            <h5>B.S. Computer Science & Computer Engineering </h5>
             <h4>Recipient of the Rennselaer Leadership Award scholarship, as well as Dean's List for the freshman year.
                 Participated in activities and societies: Photo Club, RPI TV, Rensselaer Union Student Employment,
                 Institute of Electrical and Electronics Engineers (IEEE).</h4>
@@ -259,9 +259,11 @@
                     <h1> Winner of NYC Arts Contest</h1>
                     <h2> May 2016</h2>
                     <p> Winner of the ArtsConnection "Viewpoints, Stories and Connections II" award.
-                        <span style="text-decoration: underline"> The winning artwork is one of the 11 pieces selected
-                            from over 2000 submissions from New York City. <br/><a href="Regular_Art.html">See More</a>
-                    </span>
+                        <span style="text-decoration: underline">
+                            The winning artwork is one of the 11 pieces selected
+                            from over 2000 submissions from New York City. <br/>
+                        </span>
+                        <a href="Regular_Art.html">See More</a>
                     </p>
                 </div>
             </div>
