--- a/Contacts.html
+++ b/Contacts.html
@@ -29,6 +29,7 @@
                     <li><a href="Projects.html">All</a></li>
                     <li><a href="proj_frc.html">FIRST Robotics</a></li>
                     <li><a href="index.html">Personal Website</a></li>
+                    <li><a href="Litec.html">EmbeddedControl</a></li>
                 </ul>
             </li>
             <li><a href="Games.html">GAMES</a></li>
@@ -149,6 +150,7 @@
                         <li><a href="Games.html">2048 Game</a></li>
                         <li><a href="proj_frc.html">FIRST Robotics</a></li>
                         <li><a href="index.html">Personal Website</a></li>
+                        <li><a href="Litec.html">Embedded Control</a></li>
                     </div>
                 </ul>
             </div>
@@ -187,7 +189,7 @@
         <img src="Images/PersonalLogo.png">
     </div>
 </div>
-<h4 id="standalone_footer" style="text-align: center; margin: 3% 5%"> &copy; JING WEI LI 2017. Proudly Created from Scratch</h4>
+<h4 id="standalone_footer" style="text-align: center; margin: 3% 5%"> &copy; JING WEI LI 2017-2018. Proudly Created from Scratch</h4>
 
 
 </body>
