--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <li><a href="Projects.html">All</a></li>
                     <li><a href="proj_frc.html">FIRST Robotics</a></li>
                     <li><a href="index.html">Personal Website</a></li>
+                    <li><a href="Litec.html">EmbeddedControl</a></li>
                 </ul>
             </li>
             <li><a href="Games.html">GAMES</a></li>
@@ -106,7 +107,7 @@
     <div id="quad1">
         <div id="col0">
             <div id="yt">
-                <a href="https://www.youtube.com/watch?v=f778QbGu5vc">WATCH THE <br/>WEBSITE TRAILER</a>
+                <a href="Litec.html">EMBEDDED <br/>CONTROL</a>
             </div>
         </div>
         <div id="col1">
@@ -157,6 +158,7 @@
                         <li><a href="Games.html">2048 Game</a></li>
                         <li><a href="proj_frc.html">FIRST Robotics</a></li>
                         <li><a href="index.html">Personal Website</a></li>
+                        <li><a href="Litec.html">Embedded Control</a></li>
                     </div>
                 </ul>
             </div>
@@ -195,7 +197,7 @@
         <img src="Images/PersonalLogo.png">
     </div>
 </div>
-<h4 id="standalone_footer" style="text-align: center; margin: 3% 5%"> &copy; JING WEI LI 2017. Proudly Created from Scratch</h4>
+<h4 id="standalone_footer" style="text-align: center; margin: 3% 5%"> &copy; JING WEI LI 2017-2018. Proudly Created from Scratch</h4>
 
 </body>
 </html>
